[package]
name = "leach"
authors = ["Sprite Tong <spritetong@gmail.com>"]
description = "Streamlined FFI and cross-compilation with this powerful build-helper replacement."
repository = "https://github.com/spritetong/leach"
keywords = ["cmake", "ffi", "bindings", "build-tools", "build-system"]
categories = ["development-tools::build-utils", "development-tools::ffi", "external-ffi-bindings"]
documentation = "https://docs.rs/leach"
license = "MIT"
readme = "README.md"
version = "0.3.1"
edition = "2021"
rust-version = "1.80.1"

[lib]
name = "leach"
path = "src/lib.rs"

[dependencies]
bindgen = "0.72"
semver = "1"
duct = "1"
filetime = "0.2"
regex = "1"
walkdir = "2"
